After 1 hour timeout, rangeDeleter incorrectly reports "timed out after 0 seconds"

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 3.0.0-rc6
    • Affects Version/s: 2.8.0-rc4
    • Component/s: Logging
    • None
    • Fully Compatible
    • ALL
    • Hide

      Repro is basically identical to that in SERVER-16805, i.e. deliberately prevent w:majority on the TO shard for a migration:

      mlaunch init --replicaset --nodes 2 --arbiter --smallfiles --oplogSize 100 --sharded 2 --config 1 --mongos 1 --port 33333
      mlaunch stop shard02 secondary
      mongo --port 33333
      db.getSiblingDB("config").settings.update( { "_id" : "balancer" }, { $set : { "_secondaryThrottle" : false } }, { upsert : true })
      sh.enableSharding("test")
      sh.shardCollection("test.test", {_id:1})
      db.test.insert({_id:-1})
      db.test.insert({_id:1})
      sh.splitAt("test.test", {_id:0})
      
      Show
      Repro is basically identical to that in SERVER-16805 , i.e. deliberately prevent w:majority on the TO shard for a migration: mlaunch init --replicaset --nodes 2 --arbiter --smallfiles --oplogSize 100 --sharded 2 --config 1 --mongos 1 --port 33333 mlaunch stop shard02 secondary mongo --port 33333 db.getSiblingDB( "config" ).settings.update( { "_id" : "balancer" }, { $set : { "_secondaryThrottle" : false } }, { upsert : true }) sh.enableSharding( "test" ) sh.shardCollection( "test.test" , {_id:1}) db.test.insert({_id:-1}) db.test.insert({_id:1}) sh.splitAt( "test.test" , {_id:0})
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      2015-01-12T21:31:51.993+1100 I SHARDING [migrateThread] Deleter starting delete for: test.test from { _id: MinKey } -> { _id: 0.0 }, with opId: 749
      2015-01-12T21:31:51.993+1100 I SHARDING [migrateThread] rangeDeleter deleted 0 documents for test.test from { _id: MinKey } -> { _id: 0.0 }
      2015-01-12T22:31:51.995+1100 I SHARDING [migrateThread] rangeDeleter timed out after 0 seconds while waiting for deletions to be replicated to majority nodes
      2015-01-12T22:31:51.995+1100 W SHARDING [migrateThread] Failed to queue delete for migrate abort: rangeDeleter timed out after 0 seconds while waiting for deletions to be replicated to majority nodes
      

      Note the timestamps — clearly exactly 1 hr has passed (kWTimeoutMillis in db/range_deleter.cpp:271), yet the message says "timed out after 0 seconds".

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Kevin Pulo
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: