SERVER-16806 Correctly report elapsed time in messages in range_deleter.cpp.